--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
 </head>
 
 <body>
-    <h1>PARROT CARD GAME</h1>
+    <div class="topo">
+        <h1>PARROT CARD GAME</h1>
+        <div class="contador">Você já realizou: 0 jogadas</div>
+    </div>
+
     <div class="jogo">
-       
+
     </div>
 
     <script src="scripts.js"></script>
