--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 <body>
     <div class="topo">
         <h1>PARROT CARD GAME</h1>
-        <div class="contador">Você já realizou: 0 jogadas</div>
-    </div>
 
+        <div class="cronometro"><span class="minutos">00</span>
+            <span >:</span><span class="segundos">00</span></div>
+    </div>
+    <div class="contador">Você já realizou: 0 jogadas</div>
     <div class="jogo">
 
     </div>
